--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
     <jolokia-version>1.2.3</jolokia-version>
     <junit-version>4.11</junit-version>
     <karaf-version>2.4.0</karaf-version>
+    <keycloak.version>1.1.0.Beta2-SNAPSHOT</keycloak.version>
     <log4j-version>1.2.17</log4j-version>
     <maven-version>3.0.4</maven-version>
     <maven-antrun-plugin-version>1.7</maven-antrun-plugin-version>
@@ -188,6 +189,7 @@
     <module>hawtio-fabric8-branding</module>
     <module>hawtio-karaf</module>
     <module>hawtio-custom-app</module>
+    <module>hawtio-keycloak</module>
   </modules>
 
   <build>
